refactor: improve readability, add docstrings